--- a/Project7/Project7.vcxproj
+++ b/Project7/Project7.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="rectangle.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="point.cpp" />
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="tretangle.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
