--- a/Project7/Project7.vcxproj.filters
+++ b/Project7/Project7.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="interf.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
